--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/BrendonPierson">View on GitHub</a>
 
-          <h1 id="project_title">Brendonpierson.GitHub.io</h1>
-          <h2 id="project_tagline">website practice</h2>
+          <h1 id="project_title">Erica Pierson</h1>
+          <h2 id="project_tagline">Photography, Art</h2>
 
         </header>
     </div>
