--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Erica Pierson - Visual Merchandising</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">TOP</span> 
+                    <i class="fa fa-play-circle"></i>  <span class="light">Erica Pierson</span> 
                 </a>
             </div>
 
@@ -53,7 +53,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Fashion</a>
+                        <a class="page-scroll" href="#about">Visual Merchandising</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Photography</a>
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Erica Pierson</h1>
-                        <p class="intro-text">Fashion, Art, and Design<br>In front and behind the camera.</p>
+                        <p class="intro-text">Visual Merchandising<br>Artfully, Fashionably Designed.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,9 +90,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p> With over a decade of experience in the fashion industry, Erica brings an extensive skillset and refined eye to the table. </p>
+                <p> With over a decade of experience in the art and fashion industry, Erica brings an extensive skillset and refined eye to the table. </p>
                 <p>Her work has won her NYC iron merchandising for the past two years.</p>
-                <p>She is currently accepting limited freelance work in photography, merchandising, and store display design.</p>
+                <p>She is currently accepting limited freelance work in visual merchandising design for both art and fashion displays.</p>
             </div>
         </div>
     </section>
@@ -102,8 +102,10 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Photography</h2>
-                    <p>Erica focuses on capturing the gritty nature of city life from new persepctives and vantage points</p>
+                    
+                        <h2>Photography</h2>
+                        <p>Erica focuses on capturing the gritty nature of city life from new persepctives and vantage points</p>
+                    
                     <a href="https://www.biersons.smugmug.com/" class="btn btn-default btn-lg">View her portfolio here</a>
                 </div>
             </div>
