--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <a href="https://twitter.com/ericapierson" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/erica.pierson.37/about" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="www.linkedin.com/pub/erica-pierson/98/23a/260" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
                         <a href="http://instagram.com/ericadolphin" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Instagram</span></a>
