--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p> With over a decade of experience in the art and fashion industry, Erica brings an extensive skillset and refined eye to the table. </p>
-                <p>Her work has won her NYC iron merchandising for the past two years.</p>
+                <p>Her work has won her NYC Iron Merchant for two differnt years. As well as being Pave's Global Shop 2015 winner.</p>
                 <p>She is currently accepting limited freelance work in visual merchandising design for both art and fashion displays.</p>
+                <p>As well as graphic design work.</p>
             </div>
         </div>
     </section>
@@ -104,9 +105,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     
                         <h2>Photography</h2>
-                        <p>Erica focuses on capturing the gritty nature of city life from new persepctives and vantage points</p>
+                        <p>Erica enjoys capturing the moments that other people may see but not be focused on</p>
                     
-                    <a href="https://www.biersons.smugmug.com/" class="btn btn-default btn-lg">View her portfolio here</a>
+                    <a href="http://ericapierson.smugmug.com/" class="btn btn-default btn-lg">View her portfolio here</a>
                 </div>
             </div>
         </div>
