--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Erica Pierson</h1>
-                        <p class="intro-text">Visual Merchandising<br>Artfully, Fashionably Designed.</p>
+                        <p class="intro-text">Visual Merchandising<br>Graphic Design Artfully, Fashionably Designed.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
