--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p> With over a decade of experience in the art and fashion industry, Erica brings an extensive skillset and refined eye to the table. </p>
-                <p>Her work has won her NYC Iron Merchant for two differnt years. As well as being Pave's Global Shop 2015 winner.</p>
+                <p>Her work has won her NYC Iron Merchant for two years. As well as being Pave's Global Shop 2015 winner.</p>
                 <p>She is currently accepting limited freelance work in visual merchandising design for both art and fashion displays.</p>
                 <p>As well as graphic design work.</p>
             </div>
